@@ -17,6 +17,7 @@ Version 2010
   * Added cache to speed up repeated Kodkod invocations on the same problems
   * Renamed "MiniSatJNI", "zChaffJNI", "BerkMinAlloy", and "SAT4JLight" to
  	"MiniSat_JNI", "zChaff_JNI", "BerkMin_Alloy", and "SAT4J_Light"
+  * Removed "sym_break", "flatten_prop", "sharing_depth", and "uncurry" options
 
 Version 2009-1
 
